--- a/app/src/main/res/layout/wifilistview.xml
+++ b/app/src/main/res/layout/wifilistview.xml
@@ -21,7 +21,12 @@
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/TimeStamp"
+        android:id="@+id/frequency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
